--- a/css/greet.css
+++ b/css/greet.css
@@ -9,6 +9,7 @@
 
 body {
   text-transform: capitalize;
+   font-weight: bold;
 }
 
 .container {
@@ -18,6 +19,7 @@ body {
   padding: 30%;
   font-family: arial;
   /* background-color:Aqua; */
+   font-weight: bold;
 }
 
 .InputText {
